健康保健页和地图更新

--- a/gdut_hospital/css/doctor_intro.css
+++ b/gdut_hospital/css/doctor_intro.css
@@ -1,22 +1,14 @@
-#navMenu>li ul {
-	display: block;
-}
-
-#navMenu>li ul li a#cur {
-	color: #ffff33;
-}
-
 .content {
-	padding: 16px 0 0 13px;
-}
-
-.titlebg {
-	height: 110px;
-	width: 932px;
-	background-color: #bae0f3;
+	padding-top: 16px;
 }
 
 .title {
+	height: 110px;
+	width: 960px;
+	background-color: #bae0f3;
+}
+
+.Chtitle {
 	color: #09719f;
 	font-size: 26px;
 	font-weight: normal;
@@ -56,7 +48,7 @@
 	background: url(../images/expert_introbg.png) no-repeat 21px 9px;
 }
 
-.doctor li {
+.part_cur li {
 	background: #419cd5 url(../images/doctoronbg.png) no-repeat 21px 9px;
 }
 
@@ -64,14 +56,13 @@
 	background: url(../images/rulesbg.png) no-repeat 21px 9px;
 }
 
-.doctor {
+.part_cur {
 	color: #ffffff;
 }
 
 .introduction {
 	width: 696px;
-	height: 685px;
-	margin-right: 13px;
+	min-height: 685px;
 	border: 1px solid #a3b4bf;
 	float: right;
 }
@@ -82,20 +73,24 @@
 	padding: 10px 23px;
 }
 
-.essay {
-	margin: 12px 10px 14px 10px;
+.table {
+	margin: 0 10px 14px 10px;
 }
 
-.essay h2 {
+.introduction h2 {
 	font-size: 28px;
 	font-weight: normal;
 	color: #09719f;
 	padding-left: 10px;
-	margin-bottom: 10px;
+	margin: 12px 10px 14px 10px;
 	border-left: 3px solid #419cd5;
 }
 
-.essay th {
+.table {
+	margin: 0 10px 14px 10px;
+}
+
+.table th {
 	font-size: 20px;
 	color: #000000;
 	text-align: center;
