--- a/gdut_hospital/css/hospital_intro.css
+++ b/gdut_hospital/css/hospital_intro.css
@@ -1,22 +1,14 @@
-#navMenu>li ul {
-	display: block;
-}
-
-#navMenu>li ul li a#cur {
-	color: #ffff33;
-}
-
 .content {
-	padding: 16px 0 0 13px;
-}
-
-.titlebg {
-	height: 110px;
-	width: 932px;
-	background-color: #bae0f3;
+	padding-top: 16px;
 }
 
 .title {
+	height: 110px;
+	width: 960px;
+	background-color: #bae0f3;
+}
+
+.Chtitle {
 	color: #09719f;
 	font-size: 26px;
 	font-weight: normal;
@@ -48,7 +40,7 @@
 	padding: 10px 86px 10px 71px;
 }
 
-.hospital li {
+.part_cur li {
 	background: #419cd5 url(../images/hospitalonbg.png) no-repeat 21px 9px;
 }
 
@@ -64,14 +56,13 @@
 	background: url(../images/rulesbg.png) no-repeat 21px 9px;
 }
 
-.hospital {
+.part_cur {
 	color: #ffffff;
 }
 
 .introduction {
 	width: 696px;
-	height: 685px;
-	margin-right: 13px;
+	min-height: 685px;
 	border: 1px solid #a3b4bf;
 	float: right;
 }
@@ -82,17 +73,17 @@
 	padding: 10px 23px;
 }
 
-.essay {
-	margin: 12px 10px 14px 10px;
-}
-
-.essay h2 {
+.introduction h2 {
 	font-size: 28px;
 	font-weight: normal;
 	color: #09719f;
 	padding-left: 10px;
-	margin-bottom: 10px;
+	margin: 12px 10px 14px 10px;
 	border-left: 3px solid #419cd5;
+}
+
+.essay {
+	margin: 0 10px 14px 10px;
 }
 
 .essay img {
@@ -101,11 +92,10 @@
 }
 
 .essay p {
-	font-family: 宋体;
 	font-size: 13px;
 	color: #262626;
-	letter-spacing: 2px;
-	text-indent: 30px;
+	letter-spacing: 1px;
+	text-indent: 28px;
 	line-height: 23px;
 	padding-bottom: 32px;
 }
