--- a/gdut_hospital/css/news.css
+++ b/gdut_hospital/css/news.css
@@ -1,14 +1,14 @@
 .content {
-	padding: 16px 0 0 13px;
-}
-
-.titlebg {
-	height: 110px;
-	width: 932px;
-	background-color: #bae0f3;
+	padding-top: 16px;
 }
 
 .title {
+	height: 110px;
+	width: 960px;
+	background-color: #bae0f3;
+}
+
+.Chtitle {
 	color: #09719f;
 	font-size: 26px;
 	font-weight: normal;
@@ -40,18 +40,17 @@
 	padding: 10px 86px 10px 71px;
 }
 
-.hospital_news li {
+.part_cur li {
 	background: #419cd5 url(../images/newsonbg.png) no-repeat 21px 9px;
 }
 
-.part a {
+.part_cur {
 	color: #ffffff;
 }
 
 .news {
 	width: 696px;
-	height: 685px;
-	margin-right: 13px;
+	min-height: 685px;
 	border: 1px solid #a3b4bf;
 	float: right;
 }
@@ -62,23 +61,24 @@
 	padding: 10px 23px;
 }
 
-.essay {
-	margin: 12px 10px 14px 10px;
-}
-
-.essay h2 {
+.news h2 {
 	font-size: 28px;
 	font-weight: normal;
 	color: #09719f;
 	padding-left: 10px;
+	margin: 12px 10px 14px 10px;
 	border-left: 3px solid #419cd5;
+}
+
+.essay {
+	margin: 0 10px 14px 10px;
 }
 
 .essay_title {
 	font-size: 15px;
 	color: #000000;
 	text-align: center;
-	padding-top: 18px;
+	padding-top: 4px;
 	padding-bottom: 5px;
 }
 
@@ -95,10 +95,9 @@
 }
 
 .essay p {
-	font-family: 宋体;
 	font-size: 13px;
 	color: #262626;
-	letter-spacing: 2px;
-	text-indent: 30px;
+	letter-spacing: 1px;
+	text-indent: 28px;
 	line-height: 23px;
 }
