--- a/gdut_hospital/css/socialized.css
+++ b/gdut_hospital/css/socialized.css
@@ -1,14 +1,14 @@
 .content {
-	padding: 16px 0 0 13px;
-}
-
-.titlebg {
-	height: 110px;
-	width: 932px;
-	background-color: #bae0f3;
+	padding-top: 16px;
 }
 
 .title {
+	height: 110px;
+	width: 960px;
+	background-color: #bae0f3;
+}
+
+.Chtitle {
 	color: #09719f;
 	font-size: 26px;
 	font-weight: normal;
@@ -40,18 +40,17 @@
 	padding: 10px 86px 10px 71px;
 }
 
-.socialized li {
+.part_cur li {
 	background: #419cd5 url(../images/socializedonbg.png) no-repeat 21px 9px;
 }
 
-.socialized {
+.part_cur {
 	color: #ffffff;
 }
 
-.intro {
+.socialized_medicine {
 	width: 696px;
-	height: 685px;
-	margin-right: 13px;
+	min-height: 685px;
 	border: 1px solid #a3b4bf;
 	float: right;
 }
@@ -62,36 +61,43 @@
 	padding: 10px 23px;
 }
 
-.list {
-	margin: 12px 10px 14px 10px;
-}
-
-.list h2 {
+.socialized_medicine h2 {
 	font-size: 28px;
 	font-weight: normal;
 	color: #09719f;
 	padding-left: 10px;
 	border-left: 3px solid #419cd5;
-	margin-bottom: 10px;
+	margin: 12px 10px 14px 10px;
 }
 
-.list li {
-	list-style-type: disc;
-	list-style-position: inside;
-	font-size: 1px;
-	line-height: 23px;
+.list {
+	margin: 0 10px 14px 10px;
 }
 
-.list li a {
-	font-size: 13px;
-	text-indent: 26px;
-	line-height: 23px;
+.intro {
+	height: 88px;
+	padding: 12px 0 15px;
+	margin: 0 13px 0 15px;
+	border-bottom: 2px dotted #7d7d7d;
+}
+
+.intro h4 {
+	letter-spacing: 1px;
+	padding-bottom: 8px;
 }
 
 .date {
 	color: #707070;
-	letter-spacing: 1px;
+	font-weight: normal;
 	float: right;
+}
+
+.intro p {
+	color: #000000;
+	font-size: 13px;
+	text-indent: 28px;
+	letter-spacing: 1px;
+	line-height: 20px;
 }
 
 .data {
