--- a/gdut_hospital/css/assistant.css
+++ b/gdut_hospital/css/assistant.css
@@ -1,18 +1,14 @@
-#navMenu>li ul li a#cur {
-	color: #ffff33;
-}
-
 .content {
-	padding: 16px 0 0 13px;
-}
-
-.titlebg {
-	height: 110px;
-	width: 932px;
-	background-color: #bae0f3;
+	padding-top: 16px;
 }
 
 .title {
+	height: 110px;
+	width: 960px;
+	background-color: #bae0f3;
+}
+
+.Chtitle {
 	color: #09719f;
 	font-size: 26px;
 	font-weight: normal;
@@ -60,7 +56,7 @@
 	background: url(../images/testbg.png) no-repeat 21px 9px;
 }
 
-.assistant li {
+.part_cur li {
 	background: #419cd5 url(../images/assistantonbg.png) no-repeat 21px 9px;
 }
 
@@ -68,14 +64,13 @@
 	background: url(../images/trafficbg.png) no-repeat 21px 9px;
 }
 
-.assistant {
+.part_cur {
 	color: #ffffff;
 }
 
 .medical_guide {
 	width: 696px;
-	height: 685px;
-	margin-right: 13px;
+	min-height: 685px;
 	border: 1px solid #a3b4bf;
 	float: right;
 }
@@ -86,17 +81,17 @@
 	padding: 10px 23px;
 }
 
-.essay {
-	margin: 12px 10px 14px 10px;
-}
-
-.essay h2 {
+.medical_guide h2 {
 	font-size: 28px;
 	font-weight: normal;
 	color: #09719f;
 	padding-left: 10px;
-	margin-bottom: 10px;
+	margin: 12px 10px 14px 10px;
 	border-left: 3px solid #419cd5;
+}
+
+.essay {
+	margin: 0 10px 14px 10px;
 }
 
 .essay p {
