--- a/gdut_hospital/css/download.css
+++ b/gdut_hospital/css/download.css
@@ -1,14 +1,14 @@
 .content {
-	padding: 16px 0 0 13px;
-}
-
-.titlebg {
-	height: 110px;
-	width: 932px;
-	background-color: #bae0f3;
+	padding-top: 16px;
 }
 
 .title {
+	height: 110px;
+	width: 960px;
+	background-color: #bae0f3;
+}
+
+.Chtitle {
 	color: #09719f;
 	font-size: 26px;
 	font-weight: normal;
@@ -52,10 +52,9 @@
 	color: #ffffff;
 }
 
-.intro {
+.communication {
 	width: 696px;
-	height: 685px;
-	margin-right: 13px;
+	min-height: 685px;
 	border: 1px solid #a3b4bf;
 	float: right;
 }
@@ -66,34 +65,67 @@
 	padding: 10px 23px;
 }
 
-.list {
-	margin: 12px 10px 14px 10px;
-}
-
-.list h2 {
+.communication h2 {
 	font-size: 28px;
 	font-weight: normal;
 	color: #09719f;
 	padding-left: 10px;
 	border-left: 3px solid #419cd5;
-	margin-bottom: 10px;
+	margin: 12px 10px 14px 10px;
 }
 
-.list li {
-	list-style-type: disc;
-	list-style-position: inside;
-	font-size: 1px;
-	line-height: 23px;
+.list {
+	margin: 0 10px 14px 10px;
 }
 
-.list li a {
-	font-size: 13px;
-	text-indent: 26px;
-	line-height: 23px;
+.intro {
+	padding-top: 20px;
+	padding-bottom: 19px;
+	border-bottom: 2px dotted #7d7d7d;
+	overflow: hidden;
+}
+
+.intro h4 {
+	letter-spacing: 1px;
+	padding-bottom: 8px;
+	width: 503px;
+	float: right;
 }
 
 .date {
 	color: #707070;
-	letter-spacing: 1px;
+	font-weight: normal;
 	float: right;
+}
+
+.intro img {
+	width: 154px;
+	height: 97px;
+}
+
+.intro p {
+	color: #000000;
+	font-size: 13px;
+	text-indent: 28px;
+	letter-spacing: 1px;
+	line-height: 20px;
+}
+
+.data {
+	color: #000000;
+	text-align: center;
+	padding-top: 23px;
+}
+
+.data a {
+	color: #000000;
+}
+
+.data span {
+	display: inline-block;
+	width: 40px;
+	height: 15px;
+	line-height: 15px;
+	margin-top: 3px;
+	border: 1px solid #000000;
 }
