--- a/gdut_hospital/css/feedback.css
+++ b/gdut_hospital/css/feedback.css
@@ -1,14 +1,15 @@
-.content {
-	padding: 16px 0 0 13px;
-}
 
-.titlebg {
-	height: 110px;
-	width: 932px;
-	background-color: #bae0f3;
+.content {
+	padding-top: 16px;
 }
 
 .title {
+	height: 110px;
+	width: 960px;
+	background-color: #bae0f3;
+}
+
+.Chtitle {
 	color: #09719f;
 	font-size: 26px;
 	font-weight: normal;
@@ -40,7 +41,7 @@
 	padding: 10px 86px 10px 71px;
 }
 
-.feedback li {
+.part_cur li {
 	background: #419cd5 url(../images/feedbackonbg.png) no-repeat 21px 9px;
 }
 
@@ -48,16 +49,18 @@
 	background: url(../images/downloadbg.png) no-repeat 21px 9px;
 }
 
-.feedback {
+.part_cur {
 	color: #ffffff;
 }
 
-.intro {
+.communication {
 	width: 696px;
-	height: 685px;
-	margin-right: 13px;
-	border: 1px solid #a3b4bf;
+	min-height: 685px;
 	float: right;
+}
+
+.block {
+	border: 1px solid #a3b4bf;
 }
 
 .cur {
@@ -66,34 +69,42 @@
 	padding: 10px 23px;
 }
 
-.list {
-	margin: 12px 10px 14px 10px;
-}
-
-.list h2 {
+.communication h2 {
 	font-size: 28px;
 	font-weight: normal;
 	color: #09719f;
 	padding-left: 10px;
 	border-left: 3px solid #419cd5;
-	margin-bottom: 10px;
+	margin: 12px 10px 14px 10px;
 }
 
-.list li {
-	list-style-type: disc;
-	list-style-position: inside;
-	font-size: 1px;
-	line-height: 23px;
+.list {
+	margin: 0 10px 14px 10px;
 }
 
-.list li a {
+.intro {
+	height: 88px;
+	padding: 12px 0 15px;
+	margin: 0 13px 0 15px;
+	border-bottom: 2px dotted #7d7d7d;
+}
+
+.intro h4 {
+	letter-spacing: 1px;
+	padding-bottom: 8px;
+}
+
+.intro p {
+	color: #000000;
 	font-size: 13px;
-	text-indent: 26px;
-	line-height: 23px;
+	text-indent: 28px;
+	letter-spacing: 1px;
+	line-height: 20px;
 }
 
 .status {
 	color: #707070;
+	font-weight: normal;
 	letter-spacing: 1px;
 	float: right;
 }
@@ -102,6 +113,7 @@
 	color: #000000;
 	text-align: center;
 	padding-top: 23px;
+	padding-bottom: 13px;
 }
 
 .data a {
@@ -115,4 +127,63 @@
 	line-height: 15px;
 	margin-top: 3px;
 	border: 1px solid #000000;
+}
+
+.commit {
+	margin-top: 19px;
+	margin-left: 6px;
+	overflow: hidden;
+}
+
+.need {
+	color: #c2051a;
+	display: inline-block;
+	width: 16px;
+	line-height: 35px;
+}
+
+.kind {
+	line-height: 35px;
+}
+
+.commit select {
+	margin-top: 6px;
+	width: 100px;
+	height: 24px;
+	border: 1px solid #aaaaaa;
+}
+
+.name,.email {
+	margin-top: 6px;
+	width: 250px;
+	height: 24px;
+	border: 1px solid #aaaaaa;
+}
+
+.theme {
+	margin-top: 6px;
+	width: 632px;
+	height: 24px;
+	border: 1px solid #aaaaaa;
+}
+
+.commit textarea {
+	margin-top: 6px;
+	width: 628px;
+	height: 165px;
+	border: 1px solid #aaaaaa;
+	resize: none;
+}
+
+.button {
+	font-size: 13px;
+	letter-spacing: 2px;
+	color: #ffffff;
+	background-color: #419cd5;
+	width: 105px;
+	height: 30px;
+	border: 1px solid #1d80b2;
+	margin-top: 8px;
+	margin-bottom: 9px;
+	float: right;
 }
