--- a/gdut_hospital/css/feedback_details.css
+++ b/gdut_hospital/css/feedback_details.css
@@ -1,14 +1,14 @@
 .content {
-	padding: 16px 0 0 13px;
-}
-
-.titlebg {
-	height: 110px;
-	width: 932px;
-	background-color: #bae0f3;
+	padding-top: 16px;
 }
 
 .title {
+	height: 110px;
+	width: 960px;
+	background-color: #bae0f3;
+}
+
+.Chtitle {
 	color: #09719f;
 	font-size: 26px;
 	font-weight: normal;
@@ -40,7 +40,7 @@
 	padding: 10px 86px 10px 71px;
 }
 
-.feedback li {
+.part_cur li {
 	background: #419cd5 url(../images/feedbackonbg.png) no-repeat 21px 9px;
 }
 
@@ -48,14 +48,13 @@
 	background: url(../images/downloadbg.png) no-repeat 21px 9px;
 }
 
-.feedback {
+.part_cur {
 	color: #ffffff;
 }
 
-.intro {
+.communication {
 	width: 696px;
-	height: 685px;
-	margin-right: 13px;
+	min-height: 685px;
 	border: 1px solid #a3b4bf;
 	float: right;
 }
@@ -66,22 +65,22 @@
 	padding: 10px 23px;
 }
 
-.details {
-	margin: 12px 10px 14px 10px;
-}
-
-.details h2 {
+.communication h2 {
 	font-size: 28px;
 	font-weight: normal;
 	color: #09719f;
 	padding-left: 10px;
 	border-left: 3px solid #419cd5;
-	margin-bottom: 10px;
+	margin: 12px 10px 14px 10px;
 }
 
-.details h3 {
+.details {
+	margin: 0 10px 14px 10px;
+}
+
+.details h4 {
 	font-size: 15px;
-	color: #000000;
+	letter-spacing: 1px;
 	text-align: center;
 }
 
