--- a/gdut_hospital/css/test.css
+++ b/gdut_hospital/css/test.css
@@ -1,18 +1,14 @@
-#navMenu>li ul li a#cur {
-	color: #ffff33;
-}
-
 .content {
-	padding: 16px 0 0 13px;
-}
-
-.titlebg {
-	height: 110px;
-	width: 932px;
-	background-color: #bae0f3;
+	padding-top: 16px;
 }
 
 .title {
+	height: 110px;
+	width: 960px;
+	background-color: #bae0f3;
+}
+
+.Chtitle {
 	color: #09719f;
 	font-size: 26px;
 	font-weight: normal;
@@ -56,7 +52,7 @@
 	background: url(../images/expertbg.png) no-repeat 21px 9px;
 }
 
-.test li {
+.part_cur li {
 	background: #419cd5 url(../images/testonbg.png) no-repeat 21px 9px;
 }
 
@@ -68,14 +64,13 @@
 	background: url(../images/trafficbg.png) no-repeat 21px 9px;
 }
 
-.test {
+.part_cur {
 	color: #ffffff;
 }
 
 .medical_guide {
 	width: 696px;
-	height: 685px;
-	margin-right: 13px;
+	min-height: 685px;
 	border: 1px solid #a3b4bf;
 	float: right;
 }
@@ -86,22 +81,23 @@
 	padding: 10px 23px;
 }
 
-.essay {
-	margin: 12px 10px 14px 10px;
-}
-
-.essay h2 {
+.medical_guide h2 {
 	font-size: 28px;
 	font-weight: normal;
 	color: #09719f;
 	padding-left: 10px;
-	margin-bottom: 10px;
+	margin: 12px 10px 14px 10px;
 	border-left: 3px solid #419cd5;
 }
 
-.essay h3 {
+.essay {
+	margin: 12px 10px 14px 10px;
+}
+
+.essay h4 {
 	color: #09719f;
 	font-size: 14px;
+	letter-spacing: 1px;
 	text-indent: 28px;
 	line-height: 25px;
 }
@@ -109,7 +105,8 @@
 .essay p {
 	font-size: 13px;
 	color: #000000;
-	text-indent: 26px;
+	letter-spacing: 1px;
+	text-indent: 28px;
 	line-height: 25px;
 }
 
