--- a/gdut_hospital/css/traffic_guide_map.css
+++ b/gdut_hospital/css/traffic_guide_map.css
@@ -94,7 +94,7 @@
 	margin: 12px 10px 14px 10px;
 }
 
-.guide ul {
+/*.guide ul {
 	float: right;
 }
 
@@ -136,7 +136,7 @@
 	border-top: 3px solid #1e7da7;
 	border-right: 1px solid #1e7da7;
 	border-bottom: none;
-}
+}*/
 
 .query {
 	margin-top: 50px;
