--- a/gdut_hospital/css/assistant.css
+++ b/gdut_hospital/css/assistant.css
@@ -14,11 +14,11 @@
 	font-weight: normal;
 	width: 262px;
 	padding: 30px 0 6px 38px;
-	border-bottom: 2px solid #ffffff;
+	border-bottom: 2px solid #f7f6f6;
 }
 
 .Entitle {
-	color: #ffffff;
+	color: #f7f6f6;
 	font-weight: normal;
 	padding: 5px 0 0 38px; 
 }
@@ -62,6 +62,30 @@
 
 .traffic li {
 	background: url(../images/trafficbg.png) no-repeat 21px 9px;
+}
+
+.first_aid li:hover {
+	background: #8abce6 url(../images/first_aidonbg.png) no-repeat 21px 9px;
+}
+
+.ordinary li:hover {
+	background: #8abce6 url(../images/ordinaryonbg.png) no-repeat 21px 9px;
+}
+
+.expert li:hover {
+	background: #8abce6 url(../images/expertonbg.png) no-repeat 21px 9px;
+}
+
+.test li:hover {
+	background: #8abce6 url(../images/testonbg.png) no-repeat 21px 9px;
+}
+
+.traffic li:hover {
+	background: #8abce6 url(../images/trafficonbg.png) no-repeat 21px 9px;
+}
+
+.part_other:hover {
+	color: #ffffff;
 }
 
 .part_cur {
