--- a/gdut_hospital/css/download.css
+++ b/gdut_hospital/css/download.css
@@ -14,11 +14,11 @@
 	font-weight: normal;
 	width: 262px;
 	padding: 30px 0 6px 38px;
-	border-bottom: 2px solid #ffffff;
+	border-bottom: 2px solid #f7f6f6;
 }
 
 .Entitle {
-	color: #ffffff;
+	color: #f7f6f6;
 	font-weight: normal;
 	padding: 5px 0 0 38px; 
 }
@@ -46,6 +46,14 @@
 
 .download li {
 	background: #419cd5 url(../images/downloadonbg.png) no-repeat 21px 9px;
+}
+
+.feedback li:hover {
+	background: #8abce6 url(../images/feedbackonbg.png) no-repeat 21px 9px;
+}
+
+.part_other:hover {
+	color: #ffffff;
 }
 
 .download {
